# rasa-scalable-command-generator-demo

./: config.yml  endpoints.yml  pyproject.toml
data/flows/kayak/accommodation/airbnb/: airbnb_booking.yml  airbnb_cancelation.yml  airbnb_search.yml
data/flows/kayak/accommodation/hotel/: hotel_booking.yml  hotel_cancellation.yml  hotel_search.yml  hotel_show_amenities_info.yml
data/flows/kayak/transactions/: process_payment.yml  process_refunds.yml
data/flows/kayak/transport/bus/: bus_book_ticket.yml  bus_cancellation.yml  bus_filter_trips.yml  bus_list_bought_tickets.yml
data/flows/kayak/transport/car/: cancel_car_rental.yml  change_car_rental.yml  change_car_rental_car_type.yml  list_booked_car_rentals.yml  list_car_rental_companies.yml  list_rental_vehicles.yml  rent_a_car.yml  show_car_rental_company_review.yml  show_car_rental_policies.yml
data/flows/kayak/transport/flight/: flight_book_ticket.yml  flight_cancellation.yml  flight_list_bought_tickets.yml  flight_show_luggage_info.yml
data/flows/kayak/transport/train/: train_book_ticket.yml  train_cancellation.yml  train_filter_trips.yml  train_list_bought_tickets.yml
data/flows/kayak/travel_package/: book_a_travel_package.yml  cancel_travel_package.yml
domain/kayak/: airbnb.yml  bus.yml  cancelation.yml  car.yml  flight.yml  hotel.yml  train.yml  travel_package.yml
domain/kayak/transactions/: process_payment.yml  process_refund.yml
