[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scallable-command-generator-demo"
version = "2.0.0"
description = "A starter point for exploring scalable command generator in CALM."
authors = [ "Ognjen Francuski <o.francuski@rasa.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
rasa-pro = [
#     {version = "3.8.0rc2", allow-prereleases = true}
    {path = "../rasa", develop=true, python = "<3.9"},
]

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
